fix: ensure the tiles are aligned on safari

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
 .TileSlider-list > li {
     display: inline-block;
     box-sizing: border-box;
+    vertical-align: top;
 }
 
 .TileSlider-leftControl {
